--- a/diya.css
+++ b/diya.css
@@ -11,7 +11,7 @@
   --bg: #190547;
   --bg-bottom: #6031c0;
   --size: 120;
-  --unit: calc((var(--size) / 1500) * 1vmin);
+  --unit: calc((var(--size) / 1300) * 1vmin);
   --diya-primary: #fdcf10;
   --diya-secondary: #fd5408;
   --diya-decoration: white;
@@ -34,7 +34,7 @@ body {
 .diyas-container {
   display: flex;
   justify-content: center;
-  width: 80%;
+  width: 100%;
   gap: 30px; /* Adjust the gap as needed */
 }
 
@@ -384,7 +384,7 @@ img,
   gap: 20px;
 }
 .eventdivleft{
-  width: 20%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -392,11 +392,9 @@ img,
   justify-content: center;
 }
 .eventdivright{
-  width: 100%;
+  width: 30%;
   display: flex;
   flex-direction: column;
-  height: 100%;
-  gap:20px;
   justify-content: center;
 }
 .diyacomplete {
@@ -448,14 +446,8 @@ img,
 }
 .eventcard1{
   background-color: rgb(66, 66, 66);
-border-radius: 15px; /* Rounded borders */
-box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-overflow: hidden;
 width: 100%;
-height: 100px;
-margin: 10px;
 padding: 5px;
-overflow: scroll;
 line-break: anywhere;
 color: whitesmoke;
 transition: transform 0.3s ease;
@@ -463,29 +455,19 @@ transition: transform 0.3s ease;
 
 .eventcard2{
   background-color: rgb(66, 66, 66);
-border-radius: 15px; /* Rounded borders */
-box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-overflow: hidden;
 width: 100%;
-height: 300px;
-margin: 10px;
 padding: 5px;
-overflow: scroll;
 line-break: anywhere;
 color: whitesmoke;
 transition: transform 0.3s ease;
 }
 .card4{
   background-color: rgb(66, 66, 66);
-  border-radius: 15px; /* Rounded borders */
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  width: 80%;
-  height: 130px;
-  margin: 5px;
-  overflow: scroll;
-  padding: 8px;
   transition: transform 0.3s ease;
   color: whitesmoke;
+  padding: 5px;
+  width: 100%;
+  line-break: anywhere;
   }
 
 .card{
@@ -505,6 +487,9 @@ pre{
   padding: 3px;
 }
 @media screen and (max-width: 768px) {
+  .maindivcont{
+    flex-direction: column;
+  }
   .container2 {
     display: none;
   }
@@ -539,14 +524,39 @@ pre{
     height: calc(var(--unit) * 400);
     width: calc(var(--unit) * 400);
   }
-  .leftdivlampmsg{
+  .eventdivright{
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
-  .rightdiv{
-    width: 100%;
-    height: 500px;
-  }
-  .completedscreen{
-    flex-direction: column !important;
-  }
+}
+.headercord{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  font-size: large;
+  background-color: rgb(255, 255, 255);
+  border-top-left-radius: 10px; /* Adjust the value as needed */
+border-top-right-radius: 10px;
+}
+.cardcontaincord{
+  background-color: rgb(66, 66, 66);
+  box-shadow: 0px 3px 6px #00000029;
+border-radius: 15px;
+}
+.cordevents{
+  overflow: scroll;
+  padding: 5px;
+  height:500px;
+}
+.powered{
+  display: flex;
+  justify-content: center;
+  color:whitesmoke;
+  padding-top: 5px;
+}
+.bol{
+  font-weight: 800;
 }
