--- a/style.css
+++ b/style.css
@@ -204,6 +204,10 @@ li {
 .gradient-button:hover {
   background-position: right center;
 }
+.gradient-button:disabled {
+  color: rgb(137, 137, 137);
+  border: 1px solid rgb(137, 137, 137);
+}
 
 @media screen and (max-width: 768px) {
   .form-container {
@@ -557,4 +561,5 @@ img,
 }
 a{
   text-decoration: none; 
+  cursor: pointer;
 }
